prevent horizontal scrolling

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,8 @@ body {
   background: black;
   color: white;
   height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
